--- a/animations/making ice slabs.html
+++ b/animations/making ice slabs.html
@@ -251,213 +251,235 @@
       }
       #cup-far-left {
         top: 330px;
-        left: 425px;
-        width: 110px;
-        height: 100px;
+        left: 370px;
+        width: 220px;
+        height: 150px;
         background: rgba(255,255,255,.4);
-        transform-origin: 55px 100px;
-        transform: rotateY(90deg) translateX(200px) translateZ(-50px) rotateX(2.866deg);
-        clip-path: polygon(55px 0, 110px 0, 105px 100px, 55px 100px, 55px 0);
+        transform-origin: 110px 150px;
+        transform: rotateY(90deg) translateX(200px) translateZ(-150px) rotateX(1.909deg);
+        clip-path: polygon(110px 0, 220px 0, 215px 150px, 110px 150px, 110px 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #cup-far-left-inner {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 385px;
+        width: 190px;
+        height: 135px;
         background: rgba(255,255,255,.4);
-        transform-origin: 49.5px 90px;
-        transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
-        clip-path: polygon(49.5px 0, 99px 0, 94.5px 90px, 49.5px 90px, 49.5px 0);
+        transform-origin: 95px 135px;
+        transform: rotateY(90deg) translateX(200px) translateZ(-135px) rotateX(1.909deg);
+        clip-path: polygon(95px 0, 190px 0, 185px 135px, 95px 135px, 95px 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #cup-near-left {
         top: 330px;
-        left: 425px;
-        width: 110px;
-        height: 100px;
+        left: 370px;
+        width: 220px;
+        height: 150px;
         background: rgba(255,255,255,.4);
-        transform-origin: 55px 100px;
-        transform: rotateY(90deg) translateX(200px) translateZ(-50px) rotateX(2.866deg);
-        clip-path: polygon(0 0, 55px 0, 55px 100px, 5px 100px, 0 0);
+        transform-origin: 110px 150px;
+        transform: rotateY(90deg) translateX(200px) translateZ(-150px) rotateX(1.909deg);
+        clip-path: polygon(0 0, 110px 0, 110px 150px, 5px 150px, 0 0);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #cup-near-left-inner {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 385px;
+        width: 190px;
+        height: 135px;
         background: rgba(255,255,255,.4);
-        transform-origin: 49.5px 90px;
-        transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
-        clip-path: polygon(0 0, 49.5px 0, 49.5px 90px, 4.5px 90px, 0 0);
+        transform-origin: 95px 135px;
+        transform: rotateY(90deg) translateX(200px) translateZ(-135px) rotateX(1.909deg);
+        clip-path: polygon(0 0, 95px 0, 95px 135px, 5px 135px, 0 0);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #cup-far-right {
         top: 330px;
-        left: 425px;
-        width: 110px;
-        height: 100px;
+        left: 370px;
+        width: 220px;
+        height: 150px;
         background: rgba(255,255,255,.4);
-        transform-origin: 55px 100px;
-        transform:rotateY(90deg)  translateX(200px) translateZ(50px) rotateX(-2.866deg);
-        clip-path: polygon(55px 0, 110px 0, 105px 100px, 55px 100px, 55px 0);
+        transform-origin: 110px 150px;
+        transform:rotateY(90deg)  translateX(200px) translateZ(150px) rotateX(-1.909deg);
+        clip-path: polygon(110px 0, 220px 0, 215px 150px, 110px 150px, 110px 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #cup-far-right-inner {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 385px;
+        width: 190px;
+        height: 135px;
         background: rgba(255,255,255,.4);
-        transform-origin: 49.5px 90px;
-        transform:rotateY(90deg)  translateX(200px) translateZ(45px) rotateX(-2.866deg);
-        clip-path: polygon(49.5px 0, 99px 0, 94.5px 90px, 49.5px 90px, 49.5px 0);
+        transform-origin: 95px 135px;
+        transform:rotateY(90deg)  translateX(200px) translateZ(135px) rotateX(-1.909deg);
+        clip-path: polygon(95px 0, 190px 0, 185px 135px, 95px 135px, 95px 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #cup-near-right {
         top: 330px;
-        left: 425px;
-        width: 110px;
-        height: 100px;
+        left: 370px;
+        width: 220px;
+        height: 150px;
         background: rgba(255,255,255,.4);
-        transform-origin: 55px 100px;
-        transform:rotateY(90deg)  translateX(200px) translateZ(50px) rotateX(-2.866deg);
-        clip-path: polygon(0 0, 55px 0, 55px 100px, 5px 100px, 0 0);
+        transform-origin: 110px 150px;
+        transform:rotateY(90deg)  translateX(200px) translateZ(150px) rotateX(-1.909deg);
+        clip-path: polygon(0 0, 110px 0, 110px 150px, 5px 150px, 0 0);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #cup-near-right-inner {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 385px;
+        width: 190px;
+        height: 135px;
         background: rgba(255,255,255,.4);
-        transform-origin: 49.5px 90px;
-        transform:rotateY(90deg)  translateX(200px) translateZ(45px) rotateX(-2.866deg);
-        clip-path: polygon(0 0, 49.5px 0, 49.5px 90px, 4.5px 90px, 0 0);
+        transform-origin: 95px 135px;
+        transform:rotateY(90deg)  translateX(200px) translateZ(135px) rotateX(-1.909deg);
+        clip-path: polygon(0 0, 95px 0, 95px 135px, 5px 135px, 0 0);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #water-far-bottom {
-        top: 225px;
-        left: 434.9px;
-        width: 90px;
-        height: 90px;
+        top: 190px;
+        left: 345px;
+        width: 270px;
+        height: 180px;
         background: rgba(0,0,255,.3);
-        transform: rotateX(90deg) translate3D(0, -200px, -189.8px);
-        clip-path: polygon(0 0, 90px 0, 90px 45px, 0 45px, 0 0);
+        transform: rotateX(90deg) translate3D(0, -200px, -185px);
+        clip-path: polygon(0 0, 270px 0, 270px 90px, 0 90px, 0 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #water-near-bottom {
-        top: 225px;
-        left: 434.9px;
-        width: 90px;
-        height: 90px;
+        top: 190px;
+        left: 345px;
+        width: 270px;
+        height: 180px;
         background: rgba(0,0,255,.3);
-        transform: rotateX(90deg) translate3D(0, -200px, -190px);
-        clip-path: polygon(0 45px, 90px 45px, 90px 90px, 0 90px, 0 45px);
+        transform: rotateX(90deg) translate3D(0, -200px, -185px);
+        clip-path: polygon(0 90px, 270px 90px, 270px 180px, 0 180px, 0 90px);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #water-front {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 340px;
+        width: 280px;
+        height: 135px;
         background: rgba(0,0,255,.3);
-        transform-origin: 49.5px 90px;
-        transform: translateZ(-155px) rotateX(-2.866deg);
-        clip-path: polygon(0.5px 10px, 98.5px 10px, 94.5px 90px, 4.5px 90px, 0.5px 10px);
+        transform-origin: 140px 135px;
+        transform: translateZ(-110px) rotateX(-1.909deg);
+        clip-path: polygon(0.5px 10px, 280px 10px, 275px 135px, 5px 135px, 0.5px 10px);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #water-back {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 340px;
+        width: 280px;
+        height: 135px;
         background: rgba(0,0,255,.3);
-        transform-origin: 49.5px 90px;
-        transform: translateZ(-245px) rotateX(2.866deg);
-        clip-path: polygon(0.5px 10px, 98.5px 10px, 94.5px 90px, 4.5px 90px, 0.5px 10px);
+        transform-origin: 140px 135px;
+        transform: translateZ(-290px) rotateX(1.909deg);
+        clip-path: polygon(0.5px 10px, 280px 10px, 275px 135px, 5px 135px, 0.5px 10px);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #water-far-left {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 385px;
+        width: 190px;
+        height: 135px;
         background: rgba(0,0,255,.35);
-        transform-origin: 49.5px 90px;
-        transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
-        clip-path: polygon(49.5px 10px, 98.5px 10px, 94.5px 90px, 49.5px 90px, 49.5px 10px);
+        transform-origin: 95px 135px;
+        transform: rotateY(90deg) translateX(200px) translateZ(-135px) rotateX(1.909deg);
+        clip-path: polygon(95px 10px, 189.5px 10px, 185px 135px, 95px 135px, 95px 10px);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #water-near-left {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
-        background: rgba(0,0,255,.3);
-        transform-origin: 49.5px 90px;
-        transform: rotateY(90deg) translateX(200px) translateZ(-45px) rotateX(2.866deg);
-        clip-path: polygon(0.5px 10px, 49.5px 10px, 49.5px 90px, 4.5px 90px, 0.5px 10px);
+        left: 385px;
+        width: 190px;
+        height: 135px;
+        background: rgba(0,0,255,.35);
+        transform-origin: 95px 135px;
+        transform: rotateY(90deg) translateX(200px) translateZ(-135px) rotateX(1.909deg);
+        clip-path: polygon(0.5px 10px, 95px 10px, 95px 135px, 5px 135px, 0.5px 10px);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
       #water-far-right {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
+        left: 385px;
+        width: 190px;
+        height: 135px;
         background: rgba(0,0,255,.35);
-        transform-origin: 49.5px 90px;
-        transform: rotateY(90deg)  translateX(200px) translateZ(44.9px) rotateX(-2.866deg);
-        clip-path: polygon(49.5px 10px, 98.5px 10px, 94.5px 90px, 49.5px 90px, 49.5px 10px);
+        transform-origin: 95px 135px;
+        transform:rotateY(90deg)  translateX(200px) translateZ(134.9px) rotateX(-1.909deg);
+        clip-path: polygon(95px 10px, 189.5px 10px, 185px 135px, 95px 135px, 95px 10px);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #water-near-right {
         top: 330px;
-        left: 430.5px;
-        width: 99px;
-        height: 90px;
-        background: rgba(0,0,255,.3);
-        transform-origin: 49.5px 90px;
-        transform:rotateY(90deg)  translateX(200px) translateZ(44.9px) rotateX(-2.866deg);
-        clip-path: polygon(0.5px 10px, 49.5px 10px, 49.5px 90px, 4.5px 90px, 0.5px 10px);
+        left: 385px;
+        width: 190px;
+        height: 135px;
+        background: rgba(0,0,255,.35);
+        transform-origin: 95px 135px;
+        transform:rotateY(90deg)  translateX(200px) translateZ(134.9px) rotateX(-1.909deg);
+        clip-path: polygon(0.5px 10px, 95px 10px, 95px 135px, 5px 135px, 0.5px 10px);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
+      /* #cup-far-lip {
+        top: 170px;
+        left: 325px;
+        width: 310px;
+        height: 220px;
+        background: rgba(255,255,255,.4);
+        transform: rotateX(90deg) translate3D(0, -200px, -50px);
+        clip-path: polygon(0 0, 310px 0, 310px 110px, 295px 110px, 295px 15px, 15px 15px, 15px 110px, 0 110px, 0 0);
+        opacity: 0;
+        animation: appear 3s 3s forwards;
+      }
+      #cup-near-lip {
+        top: 170px;
+        left: 325px;
+        width: 310px;
+        height: 220px;
+        background: rgba(255,255,255,.4);
+        transform: rotateX(90deg) translate3D(0, -200px, -50px);
+        clip-path: polygon(0 220px, 310px 220px, 310px 110px, 295px 110px, 295px 205px, 15px 205px, 15px 110px, 0 105px, 0 220px);
+        opacity: 0;
+        animation: disappear 23s 3s forwards;
+      } */
       #water-far-top {
-        top: 221px;
-        left: 430.95px;
-        width: 98px;
-        height: 98px;
+        top: 185px;
+        left: 340px;
+        width: 280px;
+        height: 190px;
         background: rgba(0,0,255,0.25);
-        transform: rotateX(90deg) translate3D(0, -200px, -109.85px);
-        clip-path: polygon(0 0, 98px 0, 98px 49px, 0 49px, 0 0);
+        transform: rotateX(90deg) translate3D(0, -200px, -60px);
+        clip-path: polygon(0 0, 280px 0, 280px 95px, 0 95px, 0 0);
         opacity: 0;
         animation: appear 3s 3s forwards;
       }
       #water-near-top {
-        top: 221px;
-        left: 430.9px;
-        width: 98px;
-        height: 98px;
+        top: 185px;
+        left: 340px;
+        width: 280px;
+        height: 190px;
         background: rgba(0,0,255,.3);
-        transform: rotateX(90deg) translate3D(0, -200px, -110px);
-        clip-path: polygon(0 49px, 98px 49px, 98px 98px, 0 98px, 0 49px);
+        transform: rotateX(90deg) translate3D(0, -200px, -60px);
+        clip-path: polygon(0 95px, 280px 95px, 280px 190px, 0 190px, 0 0);
         opacity: 0;
         animation: disappear 23s 3s forwards;
       }
@@ -506,12 +528,12 @@
       @keyframes reposition-t1 {
         to { 
           top: 25%;
-          left: 15%;
+          left: 6%;
           transform: scale(100%);
         }
       }
       @keyframes reposition-t2 {
-        to { top: 10%; left: 85%; }
+        to { top: 10%; left: 90%; }
       }
       @keyframes reposition-r1 { to { top: 20%; left: 43%; } }
       @keyframes reposition-r2 { to { top: 20%; left: 57%; } }
@@ -673,7 +695,7 @@
   animation: null;
 }`;
           ctxLeaders.beginPath();
-          ctxLeaders.moveTo(190, 310);
+          ctxLeaders.moveTo(90, 310);
           ctxLeaders.lineTo(480, 270);
           ctxLeaders.lineWidth = 1;
           ctxLeaders.stroke();
@@ -682,8 +704,8 @@
           ctxLeaders.textBaseline = 'top';
           ctxLeaders.textAlign = 'center';
           ctxLeaders.font = '25px sans-serif';
-          ctxLeaders.fillText('LIQUID', 170, 350);
-          ctxLeaders.fillText('CENTER', 170, 380);
+          ctxLeaders.fillText('LIQUID', 80, 350);
+          ctxLeaders.fillText('CENTER', 80, 380);
 
           ctxLeaders.fillText('CLEAR ICE', 770, 308);
 
@@ -741,13 +763,13 @@
               0.1 * (1 + (elapsedFrac - 0.35) / 0.05) + ')';
           ctxWaterBub.shadowColor = 'rgba(' + 255 * (elapsedFrac - 0.35) / 0.05 + ',' +
               255 * (elapsedFrac - 0.35) / 0.05 + ',255,1)';
-          ctxLeaders.clearRect(100, 335, 140, 40);
+          ctxLeaders.clearRect(10, 335, 140, 40);
           ctxLeaders.fillStyle = 'rgba(0,0,0,' + 
               1 * (0.4 - elapsedFrac) / 0.05 + ')';
-          ctxLeaders.fillText('LIQUID', 170, 350);
+          ctxLeaders.fillText('LIQUID', 80, 350);
           ctxLeaders.fillStyle = 'rgba(0,0,0,' + 
               1 * (elapsedFrac - 0.35) / 0.05 + ')';
-          ctxLeaders.fillText('FROZEN', 170, 350);
+          ctxLeaders.fillText('FROZEN', 80, 350);
           ctxLeaders.fillStyle = 'black';
         }
         ctxWaterBub.shadowBlur = 5;
